--- a/foto amel.htm
+++ b/foto amel.htm
@@ -2,7 +2,7 @@
 <head>
 <title>Foto Amel</title>
 </head>
-<body background="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\bg gif 5.gif ">
-<a href="C:\TUGAS\PKTI 2C\NYOBA HTML\data amel.htm"><img src="C:\TUGAS\PKTI 2C\FOTO KELOMPOK\Amel.jpg" width="250" height="250"></a>
+<body background="bg gif 5.gif ">
+<a href="data amel.htm"><img src="Amel.jpg" width="250" height="250"></a>
 </body>
 </html>
