--- a/foto andin.htm
+++ b/foto andin.htm
@@ -2,8 +2,8 @@
 <head>
 <title>Foto Andin</title>
 </head>
-<body background="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\bg gif 5.gif">
-<a href="C:\TUGAS\PKTI 2C\NYOBA HTML\data andin.htm"><img src="C:\TUGAS\PKTI 2C\FOTO KELOMPOK\Andin.jpg" width="250" height="250"></a>
+<body background="bg gif 5.gif">
+<a href="data andin.htm"><img src="Andin.jpg" width="250" height="250"></a>
 </body>
 </html>
 
