--- a/foto galeri.htm
+++ b/foto galeri.htm
@@ -2,18 +2,18 @@
 <head>
 <title>Foto Galeri</title>
 </head>
-<body background="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\bg 5.jpeg">
+<body background="bg 5.jpeg">
 <marquee>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\masak.gif" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\chef.jpg" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\gamer.gif" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\gamers.jpg" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\cat lovers.jpeg" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\kucing.gif" width=100 height=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\dandan.gif" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\dandan.jpg" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\jajan.gif" width=100 hight=100>
-<img src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\jajan.png" width=100 hight=100>
+<img src="masak.gif" width=100 hight=100>
+<img src="chef.jpg" width=100 hight=100>
+<img src="gamer.gif" width=100 hight=100>
+<img src="gamers.jpg" width=100 hight=100>
+<img src="cat lovers.jpeg" width=100 hight=100>
+<img src="kucing.gif" width=100 height=100>
+<img src="dandan.gif" width=100 hight=100>
+<img src="dandan.jpg" width=100 hight=100>
+<img src="jajan.gif" width=100 hight=100>
+<img src="jajan.png" width=100 hight=100>
 </marquee>
 </body>
 </html>
