--- a/atas.htm
+++ b/atas.htm
@@ -1,11 +1,8 @@
 <html>
 <head>
 <title>FRAME ATAS</title>
-<audio autoplay loop>
-   <source src="C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\Ingatlah Hari Ini.mp3" type="audio/mp3">
-</audio>
 </head>
-<body background= "C:\TUGAS\PKTI 2C\GAMBAR TAMBAHAN\bg gif 1.gif">
+<body background= "bg gif 1.gif">
 <!--Mencoba Frame Atas pada HTML-->
 <marquee>
 <h1 align="center"><font face="Lucida Calligraphy" color="purple">SELAMAT DATANG DI WEBSITE FANTASTIC GIRLS</h1></font>
